prevent text overflow in axis labels

--- a/src/styles/charts/label.scss
+++ b/src/styles/charts/label.scss
@@ -3,5 +3,6 @@
       color: #a7a7a7;
       font-weight: bold;
       font-size: 13px;
+      overflow: hidden;
     }
 }
